--- a/configs/extract.yaml
+++ b/configs/extract.yaml
@@ -1,14 +1,14 @@
 # Embedding extraction options
 input:
   dataroot: ./datasets/fossils_maps
-  checkpoint: ./checkpoints/fossils_target.pkl
-  mesh_extension: ["ply", "stl"]
+  checkpoint: ../MeshMAE/checkpoints/shapenet_pretrain.pkl
+  mesh_extension: ["ply", "stl", "obj"]
 
 encoder:
   pool_strategy: mean  # options: cls, mean
   batch_size: 16
   device: cuda
-  num_workers: 8
+  num_workers: 32
   normalize_embeddings: true
   save_layer_tokens: false
 
